@@ -1,5 +1,7 @@
 
 5.35  2014-08-30
+  - Added mtime attribute to Mojo::Asset::Memory.
+  - Added mtime method to Mojo::Asset and Mojo::Asset::File.
   - Improved monkey_patch to be able to name generated functions.
 
 5.34  2014-08-29
